refactor: StringUtils를 이용하여 null,empty,blank 체크 수행